# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,8 @@ import healthRouter from "./health";
 import articlesRouter from "./articles";
 import categoriesRouter from "./categories";
 import adminRouter from "./admin";
+import spotlightRouter from "./spotlight";
+import churchesRouter from "./churches";
 
 const router: IRouter = Router();
 
@@ -10,5 +12,7 @@ router.use(healthRouter);
 router.use("/articles", articlesRouter);
 router.use("/categories", categoriesRouter);
 router.use("/admin", adminRouter);
+router.use("/spotlight", spotlightRouter);
+router.use("/churches", churchesRouter);
 
 export default router;
